# hybridnonlinur

./: .gitignore  README.md  pyproject.toml  test_all.py  tutorial.ipynb  tutorial_executed.ipynb
docs/: build_docs.py  build_part1.py  build_part2.py  build_part3.py  build_part4.py  index.html  table_cell_36.html  table_cell_42.html  text_outputs.txt
hybridnonlinur/: __init__.py  core.py  critical_values.py  fourier_kruse.py  fourier_sollis.py  kss.py  kss_ff.py  quantile.py  visualize.py
