[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hybridnonlinur"
version = "1.0.0"
description = "Nonlinear Hybrid Unit Root Tests — A comprehensive Python library for Fourier-based, ESTAR, Quantile, and Fractional Frequency nonlinear unit root testing."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Dr. Merwan Roudane", email = "merwanroudane920@gmail.com"}
]
keywords = ["unit-root", "ESTAR", "Fourier", "econometrics", "time-series", "quantile-regression", "nonlinear"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "statsmodels>=0.13",
    "pandas>=1.3",
    "matplotlib>=3.5",
    "tabulate>=0.9",
]

[project.urls]
Homepage = "https://github.com/merwanroudane/hybridnonlinur"
Repository = "https://github.com/merwanroudane/hybridnonlinur"

[tool.setuptools.packages.find]
where = ["."]
include = ["hybridnonlinur*"]
